src/test/deca/context/valid/test_mod.deca
// Description:
//    operation mod reussi
//
// Resultats:
//    x = 0
//
// Historique:
//    cree le 01/01/2024

{
   int x = 42 % 2 ;
}
